2009-11-17  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* configure.ac, test/TestProviders/cmpiTestInstanceProvider.c
	[ 2859978 ] TestProviders for SFCB (added threading based functions support)

2009-11-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* fileRepository.c:
	[ 2727811 ] typeo in fileRepository.c
	(found by Shigeyoshi Hashi)

	* brokerUpc.c:
	[ 2707633 ] sfcb: doesn't advertise capabilities CMPIBrokerFT
	(based on patch by Tyrel Datwyler)
	
2009-11-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* test/stageschema.sh, Makefile.am:
	[ 2893618 ] Improve stageschema.sh

	* objectImpl.c:
	[ 2892739 ] buffer overruns in dataValueToString() 
	(patch by Bart Whitely)
	
2009-11-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 2093567 ] Qualifiers are not returned for REF properties
	(patch by Bart Whitely)

	* test/TestProviders/cmpiTestExecQueryProvider.c, 
	  test/TestProviders/cmpiTestMiscProvider.c:
	[ 2892943 ] Various compiler warnings for TestProviders
	
2009-11-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c, test/xmltest/SNS*:
	[ 2863775 ] interopProvider needs SourceNamespaces property

2009-11-03 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* Makefile.am
	[ 2871527 ] TestProviders not switchable

2009-11-02 Sean Swehla <smswehla@linux.vnet.ibm.com>
	* 20_indication.mof, default.reg.in, interopServerProvider.c
	[ 2873007 ] IndicationProfile: CIM_IndicationServiceCapabilities

2009-10-30  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* configure.ac
	[ 1993231 ] configure doesn't fail for all missing dependencies

2009-10-30  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* sfcb-dox.conf.in
	[ 2881700 ] Build failure when docs are enabled

2009-10-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* objectpath.c:
	[ 2888178 ] getObjectPath() ignores numeric types

2009-10-22 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
